Applying Danushka's patch after oral review. Could not validate this on my mac, needs testing on windows
git-svn-id: https://svn.apache.org/repos/asf/airavata/trunk@1449355 13f79535-47bb-0310-9956-ffa450edef68