@@ -17,11 +17,39 @@ rem specific language governing permissions and limitations
 rem under the License.
 
 setlocal EnableDelayedExpansion
+
 call "%~dp0"setenv.bat
+
+:loop
+if ""%1""==""-xdebug"" goto xdebug
+if ""%1""==""-security"" goto security
+if ""%1""=="""" goto run
+goto help
+
+:xdebug
+set JAVA_OPTS= %JAVA_OPTS% -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,address=8000
+shift
+goto loop
+
+:security
+set JAVA_OPTS=%JAVA_OPTS% -Djava.security.manager -Djava.security.policy=%AIRAVATA_HOME%\conf\axis2.policy -Daxis2.home=%AIRAVATA_HOME%
+shift
+goto loop
+
+:help
+echo  Usage: %0 [-options]
+echo.
+echo  where options include:
+echo   -xdebug    Start Airavata Server under JPDA debugger
+echo   -security  Enable Java 2 security
+echo   -h         Help
+goto end
+
+:run
 cd "%AIRAVATA_HOME%\bin"
 set LOGO_FILE="logo.txt"
 if exist "%LOGO_FILE%" type "%LOGO_FILE%"
-cd "%AIRAVATA_HOME%\standalone-server\bin"
-call axis2server.bat %*
-cd "%AIRAVATA_HOME%\bin"
 
+java %JAVA_OPTS% -classpath "%XBAYA_CLASSPATH%" -Djava.endorsed.dirs="%AIRAVATA_HOME%/lib/endorsed":"%JAVA_HOME%/jre/lib/endorsed":"%JAVA_HOME%/lib/endorsed" org.apache.airavata.server.ServerMain -repo "%AIRAVATA_HOME%"/repository/services -conf "%AIRAVATA_HOME%"/conf/axis2.xml %*
+
+:end
